@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed crash in test/Editor when freeing buffer 
+	  too soon (STR #2294) 
 	- Fixed Fl_Preferences Cygwin wide character bug (STR #2164)
 	- Fixed sorting in Fl_Browser - last item would not 
 	  be sorted (STR #2300)
